@@ -69,18 +69,19 @@ enum ipmi_errnum
     IPMI_ERR_DRIVER_TIMEOUT = 20,
     IPMI_ERR_MESSAGE_TIMEOUT = 21,
     IPMI_ERR_COMMAND_INVALID_FOR_SELECTED_INTERFACE = 22,
-    IPMI_ERR_BAD_COMPLETION_CODE = 23,
-    IPMI_ERR_BAD_RMCPPLUS_STATUS_CODE = 24,
-    IPMI_ERR_NOT_FOUND = 25,
-    IPMI_ERR_BMC_BUSY = 26,
-    IPMI_ERR_OUT_OF_MEMORY = 27,
-    IPMI_ERR_HOSTNAME_INVALID = 28,
-    IPMI_ERR_PARAMETERS = 29,
-    IPMI_ERR_DRIVER_PATH_REQUIRED = 30,
-    IPMI_ERR_IPMI_ERROR = 31,
-    IPMI_ERR_SYSTEM_ERROR = 32,
-    IPMI_ERR_INTERNAL_ERROR = 33,
-    IPMI_ERR_ERRNUMRANGE = 34,
+    IPMI_ERR_COMMAND_INVALID_OR_UNSUPPORTED = 23,
+    IPMI_ERR_BAD_COMPLETION_CODE = 24,
+    IPMI_ERR_BAD_RMCPPLUS_STATUS_CODE = 25,
+    IPMI_ERR_NOT_FOUND = 26,
+    IPMI_ERR_BMC_BUSY = 27,
+    IPMI_ERR_OUT_OF_MEMORY = 28,
+    IPMI_ERR_HOSTNAME_INVALID = 29,
+    IPMI_ERR_PARAMETERS = 30,
+    IPMI_ERR_DRIVER_PATH_REQUIRED = 31,
+    IPMI_ERR_IPMI_ERROR = 32,
+    IPMI_ERR_SYSTEM_ERROR = 33,
+    IPMI_ERR_INTERNAL_ERROR = 34,
+    IPMI_ERR_ERRNUMRANGE = 35,
   };
 typedef enum ipmi_errnum ipmi_errnum_type_t;
 
